--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="team-member">
-          <img class="mx-auto rounded-circle" src="img/team/me.png" alt="">
+          <img class="mx-auto rounded-circle" src="./img/team/me.png" alt="">
           <h4>Ido Oren</h4>
           <p class="text-muted"> fullstack Devloper <br> people person</p>
           <ul class="list-inline social-buttons">
